update build script to build custom jdk